added scrolling background, assets, movement

--- a/project_1/index.html
+++ b/project_1/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="canvas1"> </canvas>
+    <canvas id="canvas1" tabindex="1"> </canvas>
+    <div class="assets">
+        <img id="background" src="assets/images/background_single.png">
+        <img id="background2" src="assets/images/background_single2.png">
+
+    </div>
     <script src="assets/scripts/main.js" type="module"></script>
 </body>
 </html>
