--- a/project_1/index.html
+++ b/project_1/index.html
@@ -11,7 +11,8 @@
     <div class="assets">
         <img id="background" src="assets/images/background_single.png">
         <img id="background2" src="assets/images/background_single2.png">
-
+        <img id="obstacles" src="assets/images/smallGears.png">
+        <img id="player" src="assets/images/player_fish.png">
     </div>
     <script src="assets/scripts/main.js" type="module"></script>
 </body>
