--- a/project_1/index.html
+++ b/project_1/index.html
@@ -16,6 +16,15 @@
         <img id="background2" src="assets/images/background_single2.png">
         <img id="obstacles" src="assets/images/smallGears.png">
         <img id="player" src="assets/images/player_fish.png">
+        <audio id="charge" src="assets/sounds/charge.mp3"></audio>
+        <audio id="flap1" src="assets/sounds/flap1.mp3"></audio>
+        <audio id="flap2" src="assets/sounds/flap2.mp3"></audio>
+        <audio id="flap3" src="assets/sounds/flap3.mp3"></audio>
+        <audio id="flap4" src="assets/sounds/flap4.mp3"></audio>
+        <audio id="flap5" src="assets/sounds/flap5.mp3"></audio>
+        <audio id="lose" src="assets/sounds/lose.mp3"></audio>
+        <audio id="win" src="assets/sounds/win.mp3"></audio>
+
     </div>
     <script src="assets/scripts/main.js" type="module"></script>
 </body>
