--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     canvas projects following franks lab
     <ul>
-        <li>
-            <a href="/project_1/">flappy fish</a>
-            <a href="/project_2/">multiplayer snake</a>
-
-        </li>
+      <li>
+        <a href="/project_1/">flappy fish</a>
+      </li>
+      <li>
+        <a href="/project_2/">multiplayer snake</a>
+      </li>
     </ul>
-</body>
+  </body>
 </html>
