--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     canvas projects following franks lab
     <ul>
       <li>
-        <a href="/project_1/">flappy fish</a>
+        <a href="./project_1/">flappy fish</a>
       </li>
       <li>
-        <a href="/project_2/">multiplayer snake</a>
+        <a href="./project_2/">multiplayer snake</a>
       </li>
     </ul>
   </body>
