--- a/project_2/index.html
+++ b/project_2/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    snake browser game will go here when done
+    <canvas id="canvas1"></canvas>
+    <script src="main.js"></script>
 </body>
 </html>
