--- a/project_2/index.html
+++ b/project_2/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
