added spider sprite for george, connected name and control options to snake creation

--- a/project_2/index.html
+++ b/project_2/index.html
@@ -40,7 +40,7 @@
                     </select>
                     <div>
                         <label for="player1name">Name:</label>
-                        <input type="text" id="player1name">
+                        <input type="text" id="player1name" value="Eeby">
                     </div>
 
                 </div>
@@ -48,14 +48,14 @@
                     <p class="playerLabel">Player 2</p>
                     <label for="player2controls"> Controls: </label>
                     <select name="player2controls" id="player2controls">
-                        <option value="arrows">
+                        <option value="wasd">
                             Keyboard WASD
                         </option>
                         <option value="ai">Computer AI</option>
                     </select>
                     <div>
                         <label for="player2name">Name:</label>
-                        <input type="text" id="player2name">
+                        <input type="text" id="player2name" value="Deeby">
                     </div>
                 </div>
                 <div class="player3">
@@ -66,7 +66,7 @@
                     </select>
                     <div>
                         <label for="player3name">Name:</label>
-                        <input type="text" id="player3name">
+                        <input type="text" id="player3name" value="Plinko Horse">
                     </div>
                 </div>
                 <div class="player4">
@@ -77,7 +77,7 @@
                     </select>
                     <div>
                         <label for="player4name">Name:</label>
-                        <input type="text" id="player4name">
+                        <input type="text" id="player4name" value="Spiders George">
                     </div>
                 </div>
             </div>
