replaced spider food with transparent version, added george easter egg

--- a/project_2/index.html
+++ b/project_2/index.html
@@ -66,7 +66,7 @@
                     </select>
                     <div>
                         <label for="player3name">Name:</label>
-                        <input type="text" id="player3name" value="Plinko Horse">
+                        <input type="text" id="player3name" value="Plinko">
                     </div>
                 </div>
                 <div class="player4">
@@ -77,7 +77,7 @@
                     </select>
                     <div>
                         <label for="player4name">Name:</label>
-                        <input type="text" id="player4name" value="Spiders George">
+                        <input type="text" id="player4name" value="Horse">
                     </div>
                 </div>
             </div>
@@ -85,7 +85,9 @@
     </div>
 
     <div class="assets">
-        <img id="forest_margin_repeat" src="assets/images/forest_margin_repeat.png">
+        <img id="forest_margin_repeat" src="assets/images/forest_margin_repeat_1600x600.png">
+        <img id="magic_berry1" src="assets/images/magic_berry1.png">
+        <img id="spider_food" src="assets/images/spider_food.gif">
     </div>
 
     <script src="main.js" type="module"></script>
