started doing snake sprites, complicated bit where deciding direction to pick sprite etc.

--- a/project_2/index.html
+++ b/project_2/index.html
@@ -88,6 +88,7 @@
         <img id="forest_margin_repeat" src="assets/images/forest_margin_repeat_1600x600.png">
         <img id="magic_berry1" src="assets/images/magic_berry1.png">
         <img id="spider_food" src="assets/images/spider_food.gif">
+        <img id="snake_corgi" src="assets/images/snake_corgi.png">
     </div>
 
     <script src="main.js" type="module"></script>
