added animated food

--- a/project_2/index.html
+++ b/project_2/index.html
@@ -89,6 +89,7 @@
         <img id="magic_berry1" src="assets/images/magic_berry1.png">
         <img id="spider_food" src="assets/images/spider_food.gif">
         <img id="snake_corgi" src="assets/images/snake_corgi.png">
+        <img id="mushroom_sprite" src="assets/images/mushroom_sprite.png">
     </div>
 
     <script src="main.js" type="module"></script>
